infra/resources/emqx-tenant/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
spec:
  ingressClassName: nginx
  rules:
    - host: emqx-dashboard.apps.home.my-lab.cz
      http:
        paths:
          - backend:
              service:
                name: emqx-dashboard
                port:
                  name: dashboard
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - emqx-dashboard.apps.home.my-lab.cz
